# 24-7_Digital_Employee

./: BUG_FIXES_CHAT_PERFORMANCE.md  CHAT_INTERFACE_ADDED.md  COASTAL_RETREAT_THEME.md  CONTEXT_IMPLEMENTATION.md  FIXES_APPLIED.md  FORM_FIX_SUMMARY.md  FRONTEND_REDESIGN.md  HERO_DASHBOARD_FIX.md  IMPLEMENTATION_STATUS.md  PROFESSIONAL_2D_UI_GUIDE.md  RESPONSIVE_FIX_GUIDE.md  SLC.md  TRACKING_SYSTEM_COMPLETE.md  VISIBILITY_FIXES.md  WHATSAPP_INTEGRATION_COMPLETE.md  dev.bat  requirements.md  slc_universal_structure.md  start_all.bat
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  FIELD_MAPPING.md  README.md  alembic.ini  check_db.py  docker-compose.yml  docker-start.sh  docker-stop.sh  main.py  mcp_server.py  pyproject.toml  reset_backend.ps1  test_agent.py  test_auth.py  test_context7.py  test_crud.py  test_env.py  test_health.py  test_polling.py  test_post.py  test_providers.py  test_sentiment.py
backend/alembic/: env.py
backend/alembic/versions/: 20260224_0000_initial.py
backend/app/: __init__.py  cleanup_db.py  config.py  database.py  db.py  seed.py  test_db.py
backend/app/agent/: __init__.py  fte_agent.py
backend/app/api/: deps.py  routes.py  routes_agent.py  routes_auth.py  routes_conversations.py  routes_main.py  routes_tickets.py  webhooks.py  webhooks_old.py
backend/app/core/: __init__.py  security.py
backend/app/crud/: __init__.py  base.py  conversation.py  customer.py  knowledge_base.py  message.py  ticket.py
backend/app/models/: __init__.py  ai_provider.py  (+7 more)
backend/scripts/: load_knowledge_base.py
backend/tests/: test_agent.py
(+160 files in other folders)
